--- a/Uniswap_TWAP.ipynb
+++ b/Uniswap_TWAP.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "from uniswap_utils import getPoolPrice #https://github.com/amantay-a/misc/blob/master/uniswap_utils.py\n",
     "\n",
-    "#enable logging for debug\n",
+    "######### Enable logging for debug\n",
     "#logging.basicConfig(\n",
     "#        format='%(asctime)s %(levelname)-8s %(message)s',\n",
     "#        level='INFO',\n",
@@ -44,10 +44,10 @@
      "data": {
       "text/plain": [
        "{'latest': {'0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2-0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48': {'pool': '0x8ad599c3A0ff1De082011EFDDc58f1908eb6e6D8',\n",
-       "   'twap': {60: 3012.730593805288,\n",
-       "    300: 3012.5036546621404,\n",
-       "    600: 3012.6040681035824,\n",
-       "    3600: 3012.7095058193195}}}}"
+       "   'twap': {60: 2997.405546103503,\n",
+       "    300: 2997.405546103503,\n",
+       "    600: 2997.405546103503,\n",
+       "    3600: 3009.008760000287}}}}"
       ]
      },
      "metadata": {},
@@ -67,7 +67,7 @@
    "id": "f5bd9d09",
    "metadata": {},
    "source": [
-    "# Pull TWAPS for past blocks"
+    "# Pull TWAPS for past blocks, specify TWAP windows, and fees parameter for pool search"
    ]
   },
   {
@@ -79,14 +79,14 @@
     {
      "data": {
       "text/plain": [
-       "{13000000: {'0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0xCBCdF9626bC03E24f779434178A73a0B4bad62eD',\n",
-       "   'twap': {900: 14.43223614387738, 1800: 14.4409858964753}},\n",
-       "  '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x8ad599c3A0ff1De082011EFDDc58f1908eb6e6D8',\n",
-       "   'twap': {900: 0.00031463433153818346, 1800: 0.00031503070329769184}}},\n",
-       " 14000000: {'0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0xCBCdF9626bC03E24f779434178A73a0B4bad62eD',\n",
-       "   'twap': {900: 13.069851586855126, 1800: 13.06894403516212}},\n",
-       "  '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x8ad599c3A0ff1De082011EFDDc58f1908eb6e6D8',\n",
-       "   'twap': {900: 0.0003069529781692693, 1800: 0.00030660263842375543}}}}"
+       "{13000000: {'0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F',\n",
+       "   'twap': {900: 14.468360064157906, 1200: 14.468360064157906}},\n",
+       "  '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387',\n",
+       "   'twap': {900: 0.0003162113636405211, 1200: 0.0003165254226343278}}},\n",
+       " 14000000: {'0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F',\n",
+       "   'twap': {900: 13.111230137677282, 1200: 13.111230137677282}},\n",
+       "  '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387',\n",
+       "   'twap': {900: 0.0003056719772341306, 1200: 0.0003056719772341306}}}}"
       ]
      },
      "metadata": {},
@@ -99,8 +99,10 @@
     "                                     '0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599' #WBTC\n",
     "                                      }, \n",
     "                          tokensB = {'0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2'}, #WETH \n",
-    "                          TWAPWindows = [60*15, 60*30], #15min and 30 min TWAP\n",
-    "                          blocks = [13000000, 14000000])\n",
+    "                          TWAPWindows = [60*15, 60*20], #15min and 20 min TWAP\n",
+    "                          blocks = [13000000, 14000000],\n",
+    "                          PoolFee = 0.01 # Look for pools with 1% fee (default 0.3%)\n",
+    "                         )\n",
     "\n",
     "display(price_dict)"
    ]
@@ -116,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af77f8c8",
+   "id": "69a23e52",
    "metadata": {},
    "outputs": [],
    "source": []
