--- a/Uniswap_TWAP.ipynb
+++ b/Uniswap_TWAP.ipynb
@@ -43,11 +43,16 @@
     {
      "data": {
       "text/plain": [
-       "{'latest': {'0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2-0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48': {'pool': '0x8ad599c3A0ff1De082011EFDDc58f1908eb6e6D8',\n",
-       "   'twap': {60: 2997.405546103503,\n",
-       "    300: 2997.405546103503,\n",
-       "    600: 2997.405546103503,\n",
-       "    3600: 3009.008760000287}}}}"
+       "{'latest': {'0x8ad599c3A0ff1De082011EFDDc58f1908eb6e6D8': {'PoolFee': 3000,\n",
+       "   'twap': {60: 2934.8259543231507,\n",
+       "    300: 2934.8259543231507,\n",
+       "    600: 2936.1493038071353,\n",
+       "    3600: 2942.391509821451}},\n",
+       "  '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387': {'PoolFee': 10000,\n",
+       "   'twap': {60: 2948.6514094176287,\n",
+       "    300: 2948.6514094176287,\n",
+       "    600: 2948.6514094176287,\n",
+       "    3600: 2948.6514094176287}}}}"
       ]
      },
      "metadata": {},
@@ -56,8 +61,8 @@
    ],
    "source": [
     "price_dict = getPoolPrice(w3, \n",
-    "                          tokensA = {'0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2'},  #WETH \n",
-    "                          tokensB = {'0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'}, #USDC\n",
+    "                          tokenA = '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2',  #WETH \n",
+    "                          tokenB = '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48', #USDC\n",
     "                         )\n",
     "display(price_dict)"
    ]
@@ -72,21 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ad8f6262",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{13000000: {'0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F',\n",
-       "   'twap': {900: 14.468360064157906, 1200: 14.468360064157906}},\n",
-       "  '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387',\n",
-       "   'twap': {900: 0.0003162113636405211, 1200: 0.0003165254226343278}}},\n",
-       " 14000000: {'0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F',\n",
-       "   'twap': {900: 13.111230137677282, 1200: 13.111230137677282}},\n",
-       "  '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48-0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2': {'pool': '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387',\n",
-       "   'twap': {900: 0.0003056719772341306, 1200: 0.0003056719772341306}}}}"
+       "{13000000: {'0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F': {'PoolFee': 10000,\n",
+       "   'twap': {900: 14.468360064157906, 1200: 14.468360064157906}}},\n",
+       " 14000000: {'0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F': {'PoolFee': 10000,\n",
+       "   'twap': {900: 13.111230137677282, 1200: 13.111230137677282}}}}"
       ]
      },
      "metadata": {},
@@ -95,13 +96,11 @@
    ],
    "source": [
     "price_dict = getPoolPrice(w3, \n",
-    "                          tokensA = {'0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48', #USDC\n",
-    "                                     '0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599' #WBTC\n",
-    "                                      }, \n",
-    "                          tokensB = {'0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2'}, #WETH \n",
+    "                          tokenA = '0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599', #WBTC\n",
+    "                          tokenB = '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2', #WETH \n",
     "                          TWAPWindows = [60*15, 60*20], #15min and 20 min TWAP\n",
     "                          blocks = [13000000, 14000000],\n",
-    "                          PoolFee = 0.01 # Look for pools with 1% fee (default 0.3%)\n",
+    "                          PoolFees = [10000] # Look for pools with 1% fee only (default is both 0.3% and 1%)\n",
     "                         )\n",
     "\n",
     "display(price_dict)"
