--- a/Uniswap_TWAP.ipynb
+++ b/Uniswap_TWAP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2f2d0539",
    "metadata": {},
    "outputs": [],
@@ -36,23 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "93845576",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'latest': {'0x8ad599c3A0ff1De082011EFDDc58f1908eb6e6D8': {'PoolFee': 3000,\n",
-       "   'twap': {60: 2934.8259543231507,\n",
-       "    300: 2934.8259543231507,\n",
-       "    600: 2936.1493038071353,\n",
-       "    3600: 2942.391509821451}},\n",
-       "  '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387': {'PoolFee': 10000,\n",
-       "   'twap': {60: 2948.6514094176287,\n",
-       "    300: 2948.6514094176287,\n",
-       "    600: 2948.6514094176287,\n",
-       "    3600: 2948.6514094176287}}}}"
+       "{'latest': {'pool': '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387',\n",
+       "  'PoolFee': 10000,\n",
+       "  'twap': {60: 2948.6514094176287,\n",
+       "   300: 2948.6514094176287,\n",
+       "   600: 2948.6514094176287,\n",
+       "   3600: 2948.6514094176287}}}"
       ]
      },
      "metadata": {},
@@ -77,17 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ad8f6262",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{13000000: {'0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F': {'PoolFee': 10000,\n",
-       "   'twap': {900: 14.468360064157906, 1200: 14.468360064157906}}},\n",
-       " 14000000: {'0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F': {'PoolFee': 10000,\n",
-       "   'twap': {900: 13.111230137677282, 1200: 13.111230137677282}}}}"
+       "{13000000: {'pool': '0xCBCdF9626bC03E24f779434178A73a0B4bad62eD',\n",
+       "  'PoolFee': 3000,\n",
+       "  'twap': {900: 14.43223614387738, 1200: 14.43223614387738}},\n",
+       " 14000000: {'pool': '0xCBCdF9626bC03E24f779434178A73a0B4bad62eD',\n",
+       "  'PoolFee': 3000,\n",
+       "  'twap': {900: 13.069851586855126, 1200: 13.069397803130965}}}"
       ]
      },
      "metadata": {},
@@ -100,7 +98,7 @@
     "                          tokenB = '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2', #WETH \n",
     "                          TWAPWindows = [60*15, 60*20], #15min and 20 min TWAP\n",
     "                          blocks = [13000000, 14000000],\n",
-    "                          PoolFees = [10000] # Look for pools with 1% fee only (default is both 0.3% and 1%)\n",
+    "                          PoolFees = [3000] # Look for pools with 0.3% fee only (default is both 0.3% and 1%)\n",
     "                         )\n",
     "\n",
     "display(price_dict)"
