--- a/Uniswap_TWAP.ipynb
+++ b/Uniswap_TWAP.ipynb
@@ -36,19 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "93845576",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'latest': {'pool': '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387',\n",
-       "  'PoolFee': 10000,\n",
-       "  'twap': {60: 2948.6514094176287,\n",
-       "   300: 2948.6514094176287,\n",
-       "   600: 2948.6514094176287,\n",
-       "   3600: 2948.6514094176287}}}"
+       "{'latest': [{'pool': '0x8ad599c3A0ff1De082011EFDDc58f1908eb6e6D8',\n",
+       "   'PoolFee': 3000,\n",
+       "   'twap': {60: 2929.548282813806,\n",
+       "    300: 2929.548282813806,\n",
+       "    600: 2929.548282813806,\n",
+       "    3600: 2933.4703641719534}},\n",
+       "  {'pool': '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387',\n",
+       "   'PoolFee': 10000,\n",
+       "   'twap': {60: 2948.6514094176287,\n",
+       "    300: 2948.6514094176287,\n",
+       "    600: 2948.6514094176287,\n",
+       "    3600: 2948.6514094176287}}]}"
       ]
      },
      "metadata": {},
@@ -80,12 +86,12 @@
     {
      "data": {
       "text/plain": [
-       "{13000000: {'pool': '0xCBCdF9626bC03E24f779434178A73a0B4bad62eD',\n",
-       "  'PoolFee': 3000,\n",
-       "  'twap': {900: 14.43223614387738, 1200: 14.43223614387738}},\n",
-       " 14000000: {'pool': '0xCBCdF9626bC03E24f779434178A73a0B4bad62eD',\n",
-       "  'PoolFee': 3000,\n",
-       "  'twap': {900: 13.069851586855126, 1200: 13.069397803130965}}}"
+       "{13000000: [{'pool': '0xCBCdF9626bC03E24f779434178A73a0B4bad62eD',\n",
+       "   'PoolFee': 3000,\n",
+       "   'twap': {900: 14.43223614387738, 1200: 14.43223614387738}}],\n",
+       " 14000000: [{'pool': '0xCBCdF9626bC03E24f779434178A73a0B4bad62eD',\n",
+       "   'PoolFee': 3000,\n",
+       "   'twap': {900: 13.069851586855126, 1200: 13.069397803130965}}]}"
       ]
      },
      "metadata": {},
