--- a/chainlink_pricefeeds.ipynb
+++ b/chainlink_pricefeeds.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "ada33e94",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "      <td>comp-eth</td>\n",
        "      <td>2021-02-18 09:09:54</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>244378668045116040</td>\n",
+       "      <td>244378668045116032.0</td>\n",
        "      <td>0.244378668045116043</td>\n",
        "      <td>direct</td>\n",
        "      <td>NaN</td>\n",
@@ -531,8 +531,8 @@
        "      <td>crv-eth</td>\n",
        "      <td>2021-02-18 10:43:05</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>1486000000000000</td>\n",
-       "      <td>0.001486</td>\n",
+       "      <td>1486000000000000.0</td>\n",
+       "      <td>0.001486000000000000</td>\n",
        "      <td>direct</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.020000000000000000</td>\n",
@@ -547,7 +547,7 @@
        "      <td>snx-eth</td>\n",
        "      <td>2021-02-18 10:55:03</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>12479365000000000</td>\n",
+       "      <td>12479365000000000.0</td>\n",
        "      <td>0.012479364999999999</td>\n",
        "      <td>direct</td>\n",
        "      <td>NaN</td>\n",
@@ -563,8 +563,8 @@
        "      <td>crv-eth</td>\n",
        "      <td>2021-02-18 11:47:08</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>1454500000000000</td>\n",
-       "      <td>0.0014545</td>\n",
+       "      <td>1454500000000000.0</td>\n",
+       "      <td>0.001454500000000000</td>\n",
        "      <td>direct</td>\n",
        "      <td>-0.021197846567967749</td>\n",
        "      <td>0.020000000000000000</td>\n",
@@ -579,8 +579,8 @@
        "      <td>ftm-eth</td>\n",
        "      <td>2021-02-18 12:23:53</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>108390000000000</td>\n",
-       "      <td>0.00010839</td>\n",
+       "      <td>108390000000000.0</td>\n",
+       "      <td>0.000108390000000000</td>\n",
        "      <td>direct</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.029999999999999999</td>\n",
@@ -590,32 +590,90 @@
        "      <td>11880835.0</td>\n",
        "      <td>0x3a973394035ccfd333f19fbeb09003373e22a269331e...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ticker          updated_at     chain                 price  \\\n",
+       "0  comp-eth 2021-02-18 09:09:54  Ethereum  244378668045116032.0   \n",
+       "1   crv-eth 2021-02-18 10:43:05  Ethereum    1486000000000000.0   \n",
+       "2   snx-eth 2021-02-18 10:55:03  Ethereum   12479365000000000.0   \n",
+       "3   crv-eth 2021-02-18 11:47:08  Ethereum    1454500000000000.0   \n",
+       "4   ftm-eth 2021-02-18 12:23:53  Ethereum     108390000000000.0   \n",
+       "\n",
+       "          price_decimal    type             deviation             threshold  \\\n",
+       "0  0.244378668045116043  direct                   NaN  0.020000000000000000   \n",
+       "1  0.001486000000000000  direct                   NaN  0.020000000000000000   \n",
+       "2  0.012479364999999999  direct                   NaN  0.020000000000000000   \n",
+       "3  0.001454500000000000  direct -0.021197846567967749  0.020000000000000000   \n",
+       "4  0.000108390000000000  direct                   NaN  0.029999999999999999   \n",
+       "\n",
+       "  base  heartbeat  decimals  blockNumber  \\\n",
+       "0  eth    86400.0      18.0   11879906.0   \n",
+       "1  eth    86400.0      18.0   11880352.0   \n",
+       "2  eth    86400.0      18.0   11880406.0   \n",
+       "3  eth    86400.0      18.0   11880656.0   \n",
+       "4  eth    86400.0      18.0   11880835.0   \n",
+       "\n",
+       "                                             tx_hash  \n",
+       "0  0x9610367f2cd00cba48361195cb211f54e5775cf54efc...  \n",
+       "1  0xa102d125a730c7186a458749e3a8de6323713567c6fa...  \n",
+       "2  0x7537d4fce2d92483de4fd133947ec2cde6883f839685...  \n",
+       "3  0xb170655b26a54ea69deb98102105e6b11a686338dcb1...  \n",
+       "4  0x3a973394035ccfd333f19fbeb09003373e22a269331e...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>updated_at</th>\n",
+       "      <th>chain</th>\n",
+       "      <th>price</th>\n",
+       "      <th>price_decimal</th>\n",
+       "      <th>type</th>\n",
+       "      <th>deviation</th>\n",
+       "      <th>threshold</th>\n",
+       "      <th>base</th>\n",
+       "      <th>heartbeat</th>\n",
+       "      <th>decimals</th>\n",
+       "      <th>blockNumber</th>\n",
+       "      <th>tx_hash</th>\n",
        "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
        "    <tr>\n",
        "      <th>245931</th>\n",
        "      <td>lusd-usd</td>\n",
        "      <td>2022-04-25 07:04:23</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>99931314</td>\n",
+       "      <td>99931314.0</td>\n",
        "      <td>0.999313140000000044</td>\n",
        "      <td>direct</td>\n",
        "      <td>-0.001297706270936394</td>\n",
-       "      <td>0.010000000000000000</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>usd</td>\n",
        "      <td>3600.0</td>\n",
        "      <td>8.0</td>\n",
@@ -631,7 +689,7 @@
        "      <td>0.000353371829104088</td>\n",
        "      <td>cross</td>\n",
        "      <td>0.007896129519532114</td>\n",
-       "      <td>0.010000000000000000</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>usd</td>\n",
        "      <td>3600.0</td>\n",
        "      <td>18.0</td>\n",
@@ -643,11 +701,11 @@
        "      <td>crv-usd</td>\n",
        "      <td>2022-04-25 07:05:25</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>254174851</td>\n",
+       "      <td>254174851.0</td>\n",
        "      <td>2.541748510000000127</td>\n",
        "      <td>direct</td>\n",
-       "      <td>-0.01128635328720784</td>\n",
-       "      <td>0.010000000000000000</td>\n",
+       "      <td>-0.011286353287207840</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>usd</td>\n",
        "      <td>86400.0</td>\n",
        "      <td>8.0</td>\n",
@@ -659,11 +717,11 @@
        "      <td>frax-eth</td>\n",
        "      <td>2022-04-25 07:06:34</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>353880000000000</td>\n",
-       "      <td>0.00035388</td>\n",
+       "      <td>353880000000000.0</td>\n",
+       "      <td>0.000353880000000000</td>\n",
        "      <td>direct</td>\n",
-       "      <td>0.02120282906773574</td>\n",
-       "      <td>0.020000000000000000</td>\n",
+       "      <td>0.021202829067735740</td>\n",
+       "      <td>0.02</td>\n",
        "      <td>eth</td>\n",
        "      <td>86400.0</td>\n",
        "      <td>18.0</td>\n",
@@ -675,11 +733,11 @@
        "      <td>usdt-eth</td>\n",
        "      <td>2022-04-25 07:07:27</td>\n",
        "      <td>Ethereum</td>\n",
-       "      <td>355215739093379</td>\n",
+       "      <td>355215739093379.0</td>\n",
        "      <td>0.000355215739093379</td>\n",
        "      <td>direct</td>\n",
        "      <td>0.012501037805715098</td>\n",
-       "      <td>0.010000000000000000</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>eth</td>\n",
        "      <td>86400.0</td>\n",
        "      <td>18.0</td>\n",
@@ -688,72 +746,45 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>245936 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ticker          updated_at     chain               price  \\\n",
-       "0       comp-eth 2021-02-18 09:09:54  Ethereum  244378668045116040   \n",
-       "1        crv-eth 2021-02-18 10:43:05  Ethereum    1486000000000000   \n",
-       "2        snx-eth 2021-02-18 10:55:03  Ethereum   12479365000000000   \n",
-       "3        crv-eth 2021-02-18 11:47:08  Ethereum    1454500000000000   \n",
-       "4        ftm-eth 2021-02-18 12:23:53  Ethereum     108390000000000   \n",
-       "...          ...                 ...       ...                 ...   \n",
-       "245931  lusd-usd 2022-04-25 07:04:23  Ethereum            99931314   \n",
-       "245932  lusd-eth 2022-04-25 07:04:23  Ethereum   353371829104087.0   \n",
-       "245933   crv-usd 2022-04-25 07:05:25  Ethereum           254174851   \n",
-       "245934  frax-eth 2022-04-25 07:06:34  Ethereum     353880000000000   \n",
-       "245935  usdt-eth 2022-04-25 07:07:27  Ethereum     355215739093379   \n",
+       "          ticker          updated_at     chain              price  \\\n",
+       "245931  lusd-usd 2022-04-25 07:04:23  Ethereum         99931314.0   \n",
+       "245932  lusd-eth 2022-04-25 07:04:23  Ethereum  353371829104087.0   \n",
+       "245933   crv-usd 2022-04-25 07:05:25  Ethereum        254174851.0   \n",
+       "245934  frax-eth 2022-04-25 07:06:34  Ethereum  353880000000000.0   \n",
+       "245935  usdt-eth 2022-04-25 07:07:27  Ethereum  355215739093379.0   \n",
        "\n",
-       "               price_decimal    type             deviation  \\\n",
-       "0       0.244378668045116043  direct                   NaN   \n",
-       "1                   0.001486  direct                   NaN   \n",
-       "2       0.012479364999999999  direct                   NaN   \n",
-       "3                  0.0014545  direct -0.021197846567967749   \n",
-       "4                 0.00010839  direct                   NaN   \n",
-       "...                      ...     ...                   ...   \n",
-       "245931  0.999313140000000044  direct -0.001297706270936394   \n",
-       "245932  0.000353371829104088   cross  0.007896129519532114   \n",
-       "245933  2.541748510000000127  direct  -0.01128635328720784   \n",
-       "245934            0.00035388  direct   0.02120282906773574   \n",
-       "245935  0.000355215739093379  direct  0.012501037805715098   \n",
+       "               price_decimal    type             deviation  threshold base  \\\n",
+       "245931  0.999313140000000044  direct -0.001297706270936394       0.01  usd   \n",
+       "245932  0.000353371829104088   cross  0.007896129519532114       0.01  usd   \n",
+       "245933  2.541748510000000127  direct -0.011286353287207840       0.01  usd   \n",
+       "245934  0.000353880000000000  direct  0.021202829067735740       0.02  eth   \n",
+       "245935  0.000355215739093379  direct  0.012501037805715098       0.01  eth   \n",
        "\n",
-       "                   threshold base  heartbeat  decimals  blockNumber  \\\n",
-       "0       0.020000000000000000  eth    86400.0      18.0   11879906.0   \n",
-       "1       0.020000000000000000  eth    86400.0      18.0   11880352.0   \n",
-       "2       0.020000000000000000  eth    86400.0      18.0   11880406.0   \n",
-       "3       0.020000000000000000  eth    86400.0      18.0   11880656.0   \n",
-       "4       0.029999999999999999  eth    86400.0      18.0   11880835.0   \n",
-       "...                      ...  ...        ...       ...          ...   \n",
-       "245931  0.010000000000000000  usd     3600.0       8.0   14652356.0   \n",
-       "245932  0.010000000000000000  usd     3600.0      18.0   14652356.0   \n",
-       "245933  0.010000000000000000  usd    86400.0       8.0   14652360.0   \n",
-       "245934  0.020000000000000000  eth    86400.0      18.0   14652364.0   \n",
-       "245935  0.010000000000000000  eth    86400.0      18.0   14652368.0   \n",
+       "        heartbeat  decimals  blockNumber  \\\n",
+       "245931     3600.0       8.0   14652356.0   \n",
+       "245932     3600.0      18.0   14652356.0   \n",
+       "245933    86400.0       8.0   14652360.0   \n",
+       "245934    86400.0      18.0   14652364.0   \n",
+       "245935    86400.0      18.0   14652368.0   \n",
        "\n",
        "                                                  tx_hash  \n",
-       "0       0x9610367f2cd00cba48361195cb211f54e5775cf54efc...  \n",
-       "1       0xa102d125a730c7186a458749e3a8de6323713567c6fa...  \n",
-       "2       0x7537d4fce2d92483de4fd133947ec2cde6883f839685...  \n",
-       "3       0xb170655b26a54ea69deb98102105e6b11a686338dcb1...  \n",
-       "4       0x3a973394035ccfd333f19fbeb09003373e22a269331e...  \n",
-       "...                                                   ...  \n",
        "245931  0x2dbd5cee16a336a2b54bef77dbf323c2246d69f88f12...  \n",
        "245932  0x2dbd5cee16a336a2b54bef77dbf323c2246d69f88f12...  \n",
        "245933  0x9309fbfd5aec1d76cd43cd11abaedf6c1c92377ca5c8...  \n",
        "245934  0x29dd29e2006d96a14c6ffe746b527c6cf608d83b5aa1...  \n",
-       "245935  0xd9a30b6f5e801d4a196121637babee3c4fe2efab1e45...  \n",
-       "\n",
-       "[245936 rows x 13 columns]"
+       "245935  0xd9a30b6f5e801d4a196121637babee3c4fe2efab1e45...  "
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "df"
+    "display(df.head())\n",
+    "display(df.tail())"
    ]
   },
   {
