--- a/chainlink_pricefeeds.ipynb
+++ b/chainlink_pricefeeds.ipynb
@@ -434,9 +434,10 @@
     "                    if len(e) > 0:\n",
     "                        i = (t['updated_at'] - e['updated_at']).idxmin() \n",
     "                        e_price_decimal, e_decimals = e.loc[i][['price_decimal','decimals']]\n",
-    "                        t.ticker = ticker\n",
+    "                        t.ticker = ticker                       \n",
     "                        t.price_decimal = t.price_decimal/e_price_decimal\n",
     "                        t.decimals = 18\n",
+    "                        t.base = 'eth'                         \n",
     "                        t.type = 'cross'\n",
     "                        t.price = int(t.price_decimal*10**(t.decimals))\n",
     "                        df_cross = df_cross.append(t)\n",
@@ -455,6 +456,7 @@
     "                        e_price_decimal, e_decimals = e.loc[i][['price_decimal','decimals']]\n",
     "                        t.ticker = ticker\n",
     "                        t.decimals = e_decimals\n",
+    "                        t.base = 'usd'                        \n",
     "                        t.type = 'cross'\n",
     "                        t.price_decimal = t.price_decimal*e_price_decimal\n",
     "                        t.price = int(t.price_decimal*10**(t.decimals))\n",
