--- a/Uniswap_TWAP.ipynb
+++ b/Uniswap_TWAP.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "48e7037e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://docs.uniswap.org/protocol/reference/core/UniswapV3Pool#observe\n",
+    "#https://docs.uniswap.org/protocol/concepts/V3-overview/oracle#deriving-price-from-a-tick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "2f2d0539",
    "metadata": {},
    "outputs": [],
@@ -12,18 +23,18 @@
     "\n",
     "from uniswap_utils import getPoolPrice #https://github.com/amantay-a/misc/blob/master/uniswap_utils.py\n",
     "\n",
+    "# To be able to call historical prices, RPC must support archive mode, suggest using alchemy as it provide archive rpc for free\n",
+    "RPCEndpoint = 'https://mainnet.infura.io/v3/84842078b09946638c03157f83405213'\n",
+    "\n",
+    "w3 = Web3(Web3.HTTPProvider(RPCEndpoint, request_kwargs={'timeout': 20}))\n",
+    "print(f'Blockchain connected: {w3.isConnected()}')\n",
+    "\n",
     "######### Enable logging for debug\n",
     "#logging.basicConfig(\n",
     "#        format='%(asctime)s %(levelname)-8s %(message)s',\n",
     "#        level='INFO',\n",
     "#        datefmt='%Y-%m-%d %H:%M:%S',\n",
-    "#        )\n",
-    "\n",
-    "# To be able to call historical prices, RPC must support archive mode, suggest using alchemy as it provide archive rpc for free\n",
-    "RPCEndpoint = 'https://mainnet.infura.io/v3/84842078b09946638c03157f83405213'\n",
-    "\n",
-    "w3 = Web3(Web3.HTTPProvider(RPCEndpoint, request_kwargs={'timeout': 20}))\n",
-    "logging.info(f'Blockchain connected: {w3.isConnected()}')\n"
+    "#        )\n"
    ]
   },
   {
@@ -45,16 +56,16 @@
       "text/plain": [
        "{'latest': [{'pool': '0x8ad599c3A0ff1De082011EFDDc58f1908eb6e6D8',\n",
        "   'PoolFee': 3000,\n",
-       "   'twap': {60: 2929.548282813806,\n",
-       "    300: 2929.548282813806,\n",
-       "    600: 2929.548282813806,\n",
-       "    3600: 2933.4703641719534}},\n",
+       "   'twap': {60: 3003.4060556847417,\n",
+       "    300: 3003.4060556847417,\n",
+       "    600: 3003.066706941168,\n",
+       "    3600: 2999.5882593268657}},\n",
        "  {'pool': '0x7BeA39867e4169DBe237d55C8242a8f2fcDcc387',\n",
        "   'PoolFee': 10000,\n",
-       "   'twap': {60: 2948.6514094176287,\n",
-       "    300: 2948.6514094176287,\n",
-       "    600: 2948.6514094176287,\n",
-       "    3600: 2948.6514094176287}}]}"
+       "   'twap': {60: 3001.60464259845,\n",
+       "    300: 3001.60464259845,\n",
+       "    600: 3001.60464259845,\n",
+       "    3600: 3001.60464259845}}]}"
       ]
      },
      "metadata": {},
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "ad8f6262",
    "metadata": {},
    "outputs": [
@@ -121,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a23e52",
+   "id": "02ef0559",
    "metadata": {},
    "outputs": [],
    "source": []
